@@ -3,13 +3,14 @@ Hash: SHA256
 
 DIST sass-3.1.0.alpha.252.gem 207360 RMD160 9890d1af2fe266daa4c2d3bfb4f2f7251e207532 SHA1 a12baacc1d61e68bebce5baca2b67912925195e6 SHA256 b8691950c1023df50cc919e77b65832451a39af863a8a6e7b6af6a43e6f47c91
 EBUILD sass-3.1.0_alpha_p252-r1.ebuild 841 RMD160 aeadd6de21a995d4f6801fcdffbc92eb0d048abb SHA1 9238f1822eeda61b250781de9cedada07250ddf5 SHA256 dd92a594bc859ffc9689b793ca24dbf652f217491697761c6223585d89795dd8
+EBUILD sass-3.1.0_alpha_p252-r2.ebuild 854 RMD160 9b5678a5b3bae52cba9b11b7e80a844098ff73dc SHA1 eca92ffe0ae347eff03b1c8e36a628e96511a2c7 SHA256 47c30030012024bcff48e2b1e72a4a2b9a1d918182d74f211af5a3e74f87d763
 EBUILD sass-3.1.0_alpha_p252.ebuild 833 RMD160 0184cb71c15cf4afd11e43ddd66b11c3845d5c83 SHA1 b79a4179b3d82ddbec1c2b764b6f3b2e0511b0f9 SHA256 8d11daec9271babf033ec10279ee7ae9334ab2b76c86f92af4771919b3573d4a
-MISC ChangeLog 421 RMD160 5b7fc05ba6cd23127bf863cd4b0f4055526ab45e SHA1 94e2691668e0ef460590a34cfd4a173f03d362bb SHA256 3ecb85d62c767ff47aee5848e1a52ed6d80ca072b2fdbc1eb83642c22b04c90f
+MISC ChangeLog 578 RMD160 c4e678f3c6b033b5a9f2cee4f859caf7d6add3a4 SHA1 7877ffb4f4672a389d784f63c29c45a9539bbbce SHA256 ccd9fcc482a80a065ee1c112ed915e4cf6bbcc27521cda324c90ba0bb101f53c
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2bKMMACgkQrnu0mw69JkopNwD/cwhQd/AAeDzYGR/hOlrc8pbC
-FUr0OjJPdZ0fEvlTelsA/iCKAyYn+bSFtBlA3vXwh057ewcUHT4SyuzxQ9kKTbN4
-=U6gi
+iF4EAREIAAYFAk2bKZ4ACgkQrnu0mw69JkoDhgD/fDThCpGgHUeecXzFulV73O97
+eTjRGFubt7NOeiAqawUA/jBjDX8V98LdrNkqMgYoO2K9r0YNx0LMgeCqvrHrNsXD
+=y2WH
 -----END PGP SIGNATURE-----
